--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,10 +1,10 @@
 <div class="container-fluid">
-<!-- <div class="container"> -->
+<!-- <div class=" container"> -->
+  <%= render template: 'records/new' %>
   <div class="row">
     <div class="col-md-10">
-      <button id="record-btn">Record</button>
-      <button id="stop-btn">Stop</button>
     </div>
+
     <div class="col-md-2 bookmark-list">
       <ul>
           <li style="background: red;">
