add center controller , pause

--- a/app/views/example/index.html.erb
+++ b/app/views/example/index.html.erb
@@ -336,6 +336,15 @@ GLOBAL_ACTIONS['export'] = function () {
       <!-- Here be waveform -->
     </div>
 
+    <div class="row">
+      
+      <div class="col-md-9" style="height:300px">
+      </div>
+      <div class="col-md-3" style="height:300px">
+      </div>
+    </div>
+
+
     <div class="row" style="margin: 30px 0">
       <div class="col-sm-8">
         <p>
