--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,8 +1,3 @@
-/* Space out content a bit */
-body {
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
@@ -107,4 +102,14 @@ body {
 
 #drop.wavesurfer-dragover {
     border-color: #333;
+}
+
+.navbar-center{
+    float: none;
+    margin: 0;
+    display: inline-block;
+}
+
+.navbar-collapse{
+    text-align:center;
 }
