fixed fluid-container to container-fluid

--- a/app/views/example/index.html.erb
+++ b/app/views/example/index.html.erb
@@ -1,7 +1,7 @@
 <div id='wave'></div>
 
 
-<div class="fluid-container">
+<div class="container-fluid">
   <div id="demo">
     <p id="subtitle" class="text-center text-info">&nbsp;</p>
 
@@ -71,5 +71,5 @@
     <center><i>or</i></center>
     <button type="button" class="btn btn-danger btn-block" data-action="delete-region">Delete</button>
   </form>
-  
+
 </div>
