User can write Notes. changed audio Contorl play pause button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,15 +28,9 @@
           <button class="btn btn-link btn-lg" data-action="play">
             <span id="play">
               <i class="glyphicon glyphicon-play"></i>
-
             </span>
-          </button>
-        </li>
-        <li>
-          <button class="btn btn-link btn-lg" data-action="play">
-            <span id="play">
+            <span id="pause" style="display: none;">
               <i class="glyphicon glyphicon-pause"></i>
-
             </span>
           </button>
         </li>
@@ -45,7 +39,8 @@
             <span id="play">
               <i class="glyphicon glyphicon-stop"></i>
             </span>
-          </button></li>
+          </button>
+        </li>
         
 
       </ul>
