--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,12 +34,29 @@
         <ul class="nav navbar-nav navbar-center">
           <%= content_for(:navbar_button) %>
         </ul>
+        <ul class="nav navbar-nav navbar-right">       
+
+    
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+              <%= image_tag current_user.image, class: 'profile-image' %>
+              <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to "Sign Out", signout_path %></li>
+            </ul>
+          </li>
+        <ul>
       </div>
     </div>
+
   </nav>
   <div id="dim" class="modal-backdrop fade in" style="display: none;"></div>
-</header>
 
+    <!-- Audio Control Button -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      
+    </div><!-- /.navbar-collapse -->
+</header>
 <%= yield %>
 
 </body>
