upload feature added.

--- a/app/views/records/_note.html.erb
+++ b/app/views/records/_note.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-9">
     <div class="form-group">
       <label>Note</label>
-      <textarea class="form-control" placeholder="여기에 노트를 작성하세요" rows="8" name="note" style="height: 500px;"></textarea>
+      <textarea id="note-area" class="form-control" placeholder="여기에 노트를 작성하세요" rows="8" name="note" style="height: 500px;"><%= @record.note %></textarea>
     </div>
   </div>
   <div class="col-md-3">
