--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -15,6 +15,10 @@
 </li>
 <% end %>
 
+<div class="page-header">
+  <h1><%= @record.title %></h1>
+</div>
+
 <div class="row player-component">
   <div id='wave'></div>
 
@@ -23,7 +27,7 @@
 
     <div id="wave-timeline"></div>
 
-    <div id="waveform-player">
+    <div id="waveform-player" data-url="<%= @record.file.url %>">
       <!-- Here be waveform -->
     </div>
   </div>
