--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -1,3 +1,50 @@
-// Place all the styles related to the records controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/*
+* header
+*/
+.record-header {
+  margin: 30px 0px;
+  padding: 0 !important;
+}
+
+/*
+* item
+*/
+.record-item {
+  border-bottom: 1px solid #eeeeee;
+  padding: 0 0 30px 0 !important;
+  margin-bottom: 30px;
+}
+
+.record-item > div{
+  /*margin-bottom: 3px;*/
+}
+.record-created-at {
+  color: #cccccc;
+}
+
+.record-title {
+  font-weight: bold;
+  font-size: 1.5em;
+}
+
+.record-note {
+  height: 63px;
+  max-height: 63px;
+}
+
+.record-item {
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  a:hover {
+    text-decoration: none;
+  }
+}
+
+.truncate {
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
