--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -21,7 +21,7 @@
     <h1><%= @record.title %></h1>
   </div>
 
-  <div class="row player-component">
+  <div class="player-component">
     <div id='wave'></div>
     <p id="subtitle" class="text-center text-info">&nbsp;</p>
     <div id="wave-timeline"></div>
