--- a/app/assets/stylesheets/slide-push-menu/sidebar.scss
+++ b/app/assets/stylesheets/slide-push-menu/sidebar.scss
@@ -19,7 +19,7 @@
     margin-left: -250px;
     overflow-x: hidden;
     overflow-y: auto;
-    background: red;
+    background: white;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -63,53 +63,60 @@
     color: #999999;
 }
 
-.sidebar-nav li a:hover {
+.sidebar-nav .sidebar-item a:hover {
     text-decoration: none;
-    color: #fff;
+    color: #000;
     background: rgba(255,255,255,0.2);
 }
 
 .sidebar-nav li a:active,
 .sidebar-nav li a:focus {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .sidebar-nav > .sidebar-brand {
-    height: 65px;
-    font-size: 18px;
-    line-height: 60px;
+  height: 50px;
+  font-size: 18px;
+  line-height: 50px;
+  border-bottom: 1px solid #eeeeee;
+  margin-bottom: 20px;
 }
 
 .sidebar-nav > .sidebar-brand a {
-    color: #999999;
-}
-
-.sidebar-nav > .sidebar-brand a:hover {
-    color: #fff;
-    background: none;
+  color: #999999;
 }
 
 #wrapper {
 }
 
+.sidebar-icon {
+  font-size: 15px;
+  margin-left: -25px;
+  margin-right: 10px;
+  top: 2px;
+}
 #wrapper.toggled {
-    padding-left: 0;
+  padding-left: 0;
 }
 
 #sidebar-wrapper {
-    width: 250px;
+  width: 250px;
 }
 
 #wrapper.toggled #sidebar-wrapper {
-    width: 0;
+  width: 0;
 }
 
 #page-content-wrapper {
-    padding: 20px;
-    position: relative;
+  padding: 20px;
+  position: relative;
 }
 
 #wrapper.toggled #page-content-wrapper {
     position: relative;
     margin-right: 0;
+}
+
+.modal-backdrop.in {
+    opercity: 0.45 !important;
 }
