fixed data-bookmark typeo

--- a/app/views/records/_bookmark.html.erb
+++ b/app/views/records/_bookmark.html.erb
@@ -14,6 +14,11 @@
         <a href="" class="list-group-item" data-bookmark data-name="<%= bookmark.name %>" data-color="<%= bookmark.color %>"><span class="glyphicon bookmark-bullet" style="background-color: <%= bookmark.color %>"></span><%= bookmark.name %></a>
       <% end %>
     </div>
+<div class="col-md-3 bookmark-list">
+  <div class="list-group">
+    <a href="#" class="list-group-item list-group-item-success" data-bookmark="1">중요</a>
+    <a href="#" class="list-group-item list-group-item-info" data-bookmark="2">안중요</a>
+    <a href="#" class="list-group-item list-group-item-warning" data-bookmark="3">듣지마</a>
   </div>
 
   <div class="player-component">
