--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -8,7 +8,7 @@
         <%= record.title %>
       </div>
       <div class="record-note truncate">
-        <%= record.note.try(:*, 100).try(:truncate, 400) %>
+        <%= record.note.try(:truncate, 400) %>
       </div>
     <% end %>
   </div>
