--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -1,15 +1,17 @@
 <div class="row">
-  <div class="col-md-6 col-md-offset-3 record-item">
-    <%= link_to record_path(record) do %>
-      <div class="record-created-at">
-        <%= record.created_at.to_s(:db) %>
-      </div>
-      <div class="record-title">
-        <%= record.title %>
-      </div>
-      <div class="record-note truncate">
-        <%= record.note.try(:*, 100).try(:truncate, 400) %>
-      </div>
-    <% end %>
+  <div class="col-md-6 col-md-offset-3 record-item-container">
+    <div class="record-item">
+      <%= link_to record_path(record) do %>
+        <div class="record-created-at">
+          <%= record.created_at.to_s(:db) %>
+        </div>
+        <div>
+          <h4 class="record-title"><%= record.title %></h4>
+        </div>
+        <div class="record-note">
+          <%= record.note.try(:*, 300).try(:truncate, 500) %>
+        </div>
+      <% end %>
+    </div>
   </div>
 </div>
