--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,5 +1,5 @@
 <% content_for :header do %>
-  <%= javascript_include_tag 'recorder.js' %>
+  <%= javascript_include_tag 'recorder.js', 'data-turbolinks-track' => true %>
 <% end %>
 
 <% content_for :navbar_button do %>
