--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -30,7 +30,7 @@
 
   <div class="row">
     <%= render partial: 'note' %>
-    <%= render partial: 'bookmark' %>
+    <%= render partial: 'bookmark', locals: {bookmarks: @bookmarks} %>
   </div>
 </div>
 <!--
