--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,12 @@
             내 녹음 리스트
           <% end %>
         </li>
+        <li class="sidebar-item">
+          <%= link_to bookmarks_path do %>
+            <span class="glyphicon glyphicon-bookmark sidebar-icon" aria-hidden="true"></span>
+            내 북마크 수정하기
+          <% end %>
+        </li>
     </ul>
   </nav>
   <nav class="navbar navbar-default nav-custom">
