--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -39,7 +39,7 @@
 
   <div class="row">
     <%= render partial: 'note' %>
-    <%= render partial: 'bookmark' %>
+    <%= render partial: 'bookmark', locals: {bookmarks: @bookmarks} %>
   </div>
 </div>
 
