commit to checkout

--- a/app/assets/stylesheets/audioplayer.css
+++ b/app/assets/stylesheets/audioplayer.css
@@ -1,3 +1,11 @@
+#wave-timeline {
+  margin-bottom: 10px;
+}
+
+#waveform-player {
+  margin-bottom: 10px;
+}
+
 #pButton{
 	height:60px;
 	width: 60px;
