--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -18,7 +18,9 @@
 <div class="wave-component player-component">
     <div id='wave'></div>
     <p id="subtitle" class="text-center text-info">&nbsp;</p>
-    <div id="wave-timeline"></div>
+    <div id="wave-timeline">
+      <region class="wavesurfer-region" title="0:01–0:01" style="position: absolute; z-index: 2; height: 100%; top: 0px; left: 20px; width: 14px; cursor: move; background-color: rgba(75, 152, 131, 0.0980392);"><handle class="wavesurfer-handle wavesurfer-handle-start" style="cursor: col-resize; position: absolute; left: 0px; top: 0px; width: 1%; max-width: 4px; height: 100%;"></handle><handle class="wavesurfer-handle wavesurfer-handle-end" style="cursor: col-resize; position: absolute; left: 100%; top: 0px; width: 1%; max-width: 4px; height: 100%;"></handle></region>
+    </div>
     <div id="waveform-player" data-id="<%= @record.id %>" data-url="<%= @record.file.url %>"></div>
 </div>
 
