--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,8 @@
         </li>
     </ul>
   </nav>
-  <nav class="navbar navbar-default nav-custom">
-    <div class="container-fluid">
+  <nav class="navbar navbar-default navbar-fixed-top nav-custom">
+    <div class="container">
     <!-- <div class="container"> -->
       <div class="navbar-header">
         <a id="menu-toggle" class="navbar-brand" href="#">
@@ -37,16 +37,20 @@
         </a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-center">
+        <ul class="nav navbar-nav navbar-center navbar-icon">
           <%= content_for(:navbar_button) %>
         </ul>
-        <ul class="nav navbar-nav navbar-right">       
-
-    
+        <ul class="nav navbar-nav navbar-right navbar-icon">
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-              <%= image_tag current_user.image, class: 'profile-image' %>
-              <span class="caret"></span></a>
+              <!-- <%= image_tag current_user.image, class: 'profile-image' %> -->
+              <button class="btn btn-link btn-lg">
+                <span>
+                  <i class="glyphicon glyphicon-cog"></i>
+                </span>
+              </button>
+              <!-- <span class="glyphicon glyphicon-user profile-image" aria-hidden="true"></span> -->
+              <!-- <span class="caret"></span></a> -->
             <ul class="dropdown-menu" role="menu">
               <li><%= link_to "Sign Out", signout_path %></li>
             </ul>
@@ -60,10 +64,11 @@
 
     <!-- Audio Control Button -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      
+
     </div><!-- /.navbar-collapse -->
 </header>
-<%= yield %>
-
+  <div class="main-container">
+    <%= yield %>
+  </div>
 </body>
 </html>
