--- a/app/views/records/_bookmark.html.erb
+++ b/app/views/records/_bookmark.html.erb
@@ -1,4 +1,15 @@
-<div class="col-md-3 bookmark-list">
+<div class="col-md-2 bookmark-list">
+  <div class="speed-group btn-group" data-toggle="buttons">
+    <label class="btn btn-default active">
+      <input type="radio" data-speed="1.0" autocomplete="off" checked>1.0x
+    </label>
+    <label class="btn btn-default">
+      <input type="radio" data-speed="1.5" autocomplete="off">1.5x
+    </label>
+    <label class="btn btn-default">
+      <input type="radio" data-speed="2.0" autocomplete="off">2.0x
+    </label>
+  </div>
   <div class="list-group">
     <a href="#" class="list-group-item list-group-item-success" data-bookmark="1">중요</a>
     <a href="#" class="list-group-item list-group-item-info" data-bookmark="2">안중요</a>
