--- a/app/views/records/_note.html.erb
+++ b/app/views/records/_note.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6 col-md-offset-3">
+<div class="col-md-12">
   <div class="form-group">
     <div id="note-area">
       <%= @record.note %>
