--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -3,6 +3,7 @@
 <% end %>
 
 <% content_for :navbar_button do %>
+  <li class="player-component play">
     <button class="btn btn-link btn-lg" data-action="play">
       <span data-play>
         <i class="glyphicon glyphicon-play"></i>
