--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -1,53 +1,93 @@
-.new-bookmark {
-  min-height: 56px;
-  padding: 10px 15px;
+
+
+.palette {
+  height: 20px;
+  width: 20px;
+  display: inline-block;
+  background-color: red;
+  border-radius: 2px;
+}
+
+.dropdown-menu {
+  width: 190px;
+  padding: 6px !important;
+  li {
+    height: 25px;
+  }
+
+  .palette {
+    height: 25px;
+    width: 25px;
+    border-radius: 0px;
+  }
+}
+
+/*
+* 일단통과
+*/
+.color-1 {background-color: #e11d21;}
+.color-2 {background-color: #eb6420;}
+.color-3 {background-color: #fbca04;}
+.color-4 {background-color: #009800;}
+.color-5 {background-color: #006b75;}
+.color-6 {background-color: #207de5;}
+.color-7 {background-color: #0052cc;}
+.color-8 {background-color: #5319e7;}
+.color-9 {background-color: #f7c6c7;}
+.color-10 {background-color: #fad8c7;}
+.color-11 {background-color: #fef2c0;}
+.color-12 {background-color: #bfe5bf;}
+.color-13 {background-color: #bfdadc;}
+.color-14 {background-color: #c7def8;}
+
+.bookmark {
+  display: inline-block;
+  padding: 6px 12px;
+  color: white;  
+  border: 1px solid transparent;
+  border-radius: 4px;
+  box-shadow: inset 0 -1px 0 rgba(0,0,0,0.12);
+}
+.pull-right > .glyphicon, .pull-right > .glyphicon:hover {
+  margin-top: 10px;
+  margin-right: 10px;
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 16px;
+  text-decoration: none;
+}
+
+#new-bookmark-form {
+  margin-bottom: 30px;
   border: 1px solid #ddd;
   border-radius: 4px;
-
+  padding: 10px 15px;
+}
+.bookmark-form {
+  
+  
   .name {
-    width: 70%;
-
+    
+    width: 40%;
+    margin-right: 10px;
+  
     .form-control {
       width: 100% !important;
     }
   }
+
   .color {
-    cursor: pointer;
+    
     width: 34px;
-    height: 34px;
-    padding: 10px 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+
+    .dropdown-toggle {
+      height: 34px;
+      padding: 6px !important;
+    }
   }
 }
 
-
-
-.bookmark {
-  display: inline-block;
-
-
-  border: 1px solid transparent;
-
-  padding: 6px 12px;
-
-
-  border-radius: 4px;
-  color: white;
-  padding: 5px 20;
-  box-shadow: inset 0 -1px 0 rgba(0,0,0,0.12);
+.a:hover, .b:hover, .c:hover, .d:hover, .e:hover,
+.f:hover, .g:hover, .h:hover, .i:hover, .j:hover,
+.k:hover, .l:hover, .m:hover, .n:hover {
+  boder: 2px solid white !important;
 }
-.pull-right > .glyphicon, .pull-right > .glyphicon:hover {
-  margin-right: 10px;
-  text-decoration: none;
-  color: rgba(0, 0, 0, 0.6);
-  font-size: 16px;
-}
-
-.bookmark-action {
-  float: right;
-  margin-top: 10px;
-}
-
