--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -44,7 +44,7 @@
 <div class="container">
   <div class="row">
     <%= render partial: 'note' %>
-    <!-- <%= render partial: 'bookmark' %> -->
+    <%= render partial: 'bookmark' %>
   </div>
 </div>
 
