--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-6 col-md-offset-3 record-item-container">
     <div class="record-item">
       <%= link_to record_path(record) do %>
-        <% if record.deleted then %>
+        <% if record.deleted %>
           <% next %>
         <% end %>
         <div class="record-created-at">
