--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -43,7 +43,7 @@
   </div>
 </div> -->
 
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <%= render partial: 'note' %>
     <%= render partial: 'bookmark' %>
