--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -5,10 +5,10 @@
 <% content_for :navbar_button do %>
   <li class="player-component">
     <button class="btn btn-link btn-lg" data-action="play">
-      <span id="play">
+      <span data-play>
         <i class="glyphicon glyphicon-play"></i>
       </span>
-      <span id="pause" style="display: none;">
+      <span data-pause style="display: none;">
         <i class="glyphicon glyphicon-pause"></i>
       </span>
     </button>
