controll-btn css "outline: none;" add.

--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -149,6 +149,7 @@
     vertical-align: middle;
     background-color: transparent;
     border: 0px;
+    outline: none;
   }
 
   .controll-btn:hover {
