show.html.erb layout modify.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
 @import "bootstrap";
 
 .navbar-default {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: #666666;
 
   .navbar-brand {
     color: white;
@@ -61,5 +61,5 @@ nav {
 }
 
 .main-container {
-  padding-top: 70px;
+  padding-top: 52px;
 }
