--- a/app/assets/stylesheets/audioplayer.css
+++ b/app/assets/stylesheets/audioplayer.css
@@ -33,9 +33,17 @@
      display: none; 
      position: absolute;
      left: 50%;
-     top: -10px; // set this whatever you want
+     top: -10px;
 }
 
 .tooltip-target:hover .tooltip-content {
     display: block;
+}
+
+.wave-component {
+  width: 100%;
+  position: fixed;
+  background-color: white;
+  z-index: 3;
+  padding: 0px 20px;
 }
