--- a/app/views/records/_bookmark.html.erb
+++ b/app/views/records/_bookmark.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-4 bookmark-list">
+<div class="col-md-2 bookmark-list pull-right">
 
   <div class="panel panel-success">
     <div class="panel-heading">
