--- a/app/assets/stylesheets/bookmark/bookmark-list.scss
+++ b/app/assets/stylesheets/bookmark/bookmark-list.scss
@@ -1,7 +1,9 @@
 .bookmark-list {
     height: 500px;
     overflow-y: auto;
-    top: 135px;
+    position: fixed !important;
+    right: 7%;
+    top: 185px;
 }
 
 /* Sidebar Styles */
