--- a/app/views/records/_note.html.erb
+++ b/app/views/records/_note.html.erb
@@ -1,11 +1,7 @@
-<div class="col-md-6 col-md-offset-3">
+<div class="col-md-12">
   <div class="form-group">
     <div id="note-area">
       <%= @record.note.try(:html_safe) %>
     </div>
   </div>
 </div>
-
-<script>
-  var editor = new MediumEditor('#note-area');
-</script>
