new.html.erb, show.html.erb layout fix.

--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -74,22 +74,6 @@
   top: 20px;
   right: 20px;
 
-#note-area {
-  font-family: ProximaNovaRegular, Helvetica, Arial, sans-serif;
-  font-size: 22px;
-  line-height: 30px;
-
-  margin-top: 50px;
-
-  p {
-    line-height: 1.7em;
-  }
-
-  h3 {
-    font-size: 36px;
-  }
-}
-
 #note-area:focus,
 #note-area:active {
   outline:0px !important;
@@ -102,10 +86,9 @@
 }
 
 #note-area {
+  font-family: ProximaNovaRegular, Helvetica, Arial, sans-serif;
   font-size: 22px;
   line-height: 30px;
-
-  margin-top: 50px;
 
   p {
     line-height: 1.7em;
@@ -131,6 +114,10 @@
   height: 10px !important;
   margin-right: 10px;
 
+}
+
+.note-component {
+  margin-top: 145px;
 }
 
 
