--- a/app/views/records/_note.html.erb
+++ b/app/views/records/_note.html.erb
@@ -1,7 +1,11 @@
-<div class="col-md-12">
+<div class="col-md-12 note-component">
   <div class="form-group">
     <div id="note-area">
       <%= @record.note.try(:html_safe) %>
     </div>
   </div>
 </div>
+
+<script>
+  var editor = new MediumEditor('#note-area');
+</script>
