--- a/app/assets/stylesheets/audioplayer.css
+++ b/app/assets/stylesheets/audioplayer.css
@@ -45,5 +45,6 @@
   position: fixed;
   background-color: white;
   z-index: 3;
-  padding: 0px 20px;
+  padding-top: 20px;
+  padding-bottom: 30px;
 }
