--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -13,13 +13,13 @@
     </button>
   </li>
 <% end %>
-
+<!-- 
 <div class="wave-component player-component">
     <div id='wave'></div>
     <p id="subtitle" class="text-center text-info">&nbsp;</p>
     <div id="wave-timeline"></div>
     <div id="waveform-player" data-id="<%= @record.id %>" data-url="<%= @record.file.url %>"></div>
-</div>
+</div> -->
 
 <div class="container">
   <div class="row">
