--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -121,6 +121,12 @@
 
 .note-component {
   margin-top: 145px;
+
+  .record-title {
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 20px;
+  }
 }
 
 .speed-controller, .paly-controller {
