--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 
     <div id="user_nav">
       <div class="main_text">
-      <h1> Parrot </h1>
+      <h1> LoroClip </h1>
         <p class="lead-text">친구들과 함께 특별한 녹음을 준비해보세요</p>
       </div>
 
