--- a/app/views/records/_bookmark.html.erb
+++ b/app/views/records/_bookmark.html.erb
@@ -2,7 +2,7 @@
 
   <div class="panel panel-success">
     <div class="panel-heading">
-      <h3 class="panel-title">BookMark List
+      <h3 class="panel-title">Bookmark List
         <button class="bookmark-add-btn pull-right">
           <span>
             <i class="glyphicon glyphicon-plus"></i>
