--- a/app/assets/stylesheets/bookmarks.scss
+++ b/app/assets/stylesheets/bookmarks.scss
@@ -43,7 +43,7 @@
 .bookmark {
   display: inline-block;
   padding: 6px 12px;
-  color: white;  
+  color: white;
   border: 1px solid transparent;
   border-radius: 4px;
   box-shadow: inset 0 -1px 0 rgba(0,0,0,0.12);
@@ -57,26 +57,26 @@
 }
 
 #new-bookmark-form {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   border: 1px solid #ddd;
   border-radius: 4px;
   padding: 10px 15px;
 }
 .bookmark-form {
-  
-  
+
+
   .name {
-    
+
     width: 40%;
     margin-right: 10px;
-  
+
     .form-control {
       width: 100% !important;
     }
   }
 
   .color {
-    
+
     width: 34px;
 
     .dropdown-toggle {
@@ -90,4 +90,8 @@
 .f:hover, .g:hover, .h:hover, .i:hover, .j:hover,
 .k:hover, .l:hover, .m:hover, .n:hover {
   boder: 2px solid white !important;
+}
+
+.bookmark-header {
+  margin-bottom: 20px;
 }
