--- a/app/views/bookmarks/_edit.html.erb
+++ b/app/views/bookmarks/_edit.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @bookmark, url: bookmark_path(@bookmark), html: { class: "form-inline bookmark-form"} do |f| %>
     <div class="form-group name">
       <%= f.label :name, class: "hidden" %>
-      <%= f.text_field :name, class: "form-control", placeholder: "책갈피 이름을 입력해 주세요."%>
+      <%= f.text_field :name, class: "form-control", placeholder: "Please enter a bookmark name."%>
     </div>
 
     <div class="form-group color">
@@ -24,7 +24,7 @@
       </div>
     </div>
     <div class="pull-right">
-      <button class="btn btn-default" data-close-bookmark-form type="button">취소</button>
-      <%= f.submit "수정하기", class: "btn btn-primary" %>
+      <button class="btn btn-default" data-close-bookmark-form type="button">CANCLE</button>
+      <%= f.submit "OK", class: "btn btn-primary" %>
     </div>
   <% end %>
