--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,24 +12,24 @@
   <nav id="sidebar-wrapper">
     <ul class="sidebar-nav">
         <li class="sidebar-brand">
-            <a>Parrot</a>
+            <a>LoroClip</a>
         </li>
         <li class="sidebar-item">
           <%= link_to new_record_path do %>
             <span class="glyphicon glyphicon-plus sidebar-icon" aria-hidden="true"></span>
-            새 녹음본 만들기
+            New Record
           <% end %>
         </li>
         <li class="sidebar-item">
           <%= link_to records_path do %>
             <span class="glyphicon glyphicon-list-alt sidebar-icon" aria-hidden="true"></span>
-            내 녹음 리스트
+            My Record List
           <% end %>
         </li>
         <li class="sidebar-item">
           <%= link_to bookmarks_path do %>
             <span class="glyphicon glyphicon-bookmark sidebar-icon" aria-hidden="true"></span>
-            내 북마크 수정하기
+            My Bookmark List
           <% end %>
         </li>
     </ul>
