--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -18,25 +18,11 @@
           <div class="record-btn" data-post="<%= record.id %>" data-toggle="modal" data-target="#edit-modal">
             <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
           </div>
-          <%= link_to record_path(record), class: "record-btn", method: :delete, data: {confirm: "정말로 삭제하시겠습니까?"} do %>
+          <%= link_to record_path(record), class: "record-btn", method: :delete, data: {confirm: "Are you sure you want to delete?"} do %>
             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
           <% end %>
         </div>
       <% end %>
-    </div>
-  </div>
-</div>
-
-<!-- product record -->
-<div class="modal fade" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="edit-modal-label" aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="edit-modal-label">녹음본 수정하기</h4>
-      </div>
-      <div class="modal-body">
-      </div>
     </div>
   </div>
 </div>
