--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -2,9 +2,22 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
       <div>
-        <h3 class="page-header">My record list</h3>
+        <h3 class="page-header">My Record List</h3>
       </div>
     </div>
   </div>
   <%= render (@records) %>
+</div>
+
+<div class="modal fade" id="edit-modal" tabindex="-1" role="dialog" aria-labelledby="edit-modal-label" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="edit-modal-label">녹음본 수정하기</h4>
+      </div>
+      <div class="modal-body">
+      </div>
+    </div>
+  </div>
 </div>
