--- a/app/views/records/_edit_modal.html.erb
+++ b/app/views/records/_edit_modal.html.erb
@@ -12,8 +12,8 @@
       <% end %> 
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
-      <%= f.submit "수정하기", class: "btn btn-primary" %>
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      <%= f.submit "Edit", class: "btn btn-primary" %>
     </div>
   </div>
 <% end %>
