--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -14,7 +14,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="edit-modal-label">녹음본 수정하기</h4>
+        <h4 class="modal-title" id="edit-modal-label">Edit Record</h4>
       </div>
       <div class="modal-body">
       </div>
